<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:focusable="true" android:focusableInTouchMode="true"
             tools:context=".ui.view.fragments.ConcreteFragment" android:background="#FFFFFF">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_gravity="center">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:gravity="center">
            <TextView
                    android:text="@string/easy_plate_info"
                    android:layout_width="333dp"
                    android:layout_height="wrap_content" android:id="@+id/infoText"
                    android:layout_margin="@dimen/activity_horizontal_margin" android:gravity="center"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="100dp" android:layout_marginRight="100dp">
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number|numberDecimal"
                        android:ems="10"
                        android:id="@+id/metersField" android:layout_weight="1" android:textSize="30sp"
                        android:autofillHints="" android:text="@string/cero"/>
                <TextView
                        android:text="@string/squared_meters"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/sqrtText" android:layout_weight="0"
                        android:textSize="30sp"/>
            </LinearLayout>
            <TextView
                    android:text="@string/amounts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/amounts" android:gravity="center"
                    android:textSize="24sp" android:layout_marginTop="20sp"/>
            <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="345dp" android:id="@+id/amountsTable"
                    android:layout_marginTop="30dp" android:layout_marginRight="16sp"
                    android:layout_marginBottom="16sp" android:layout_marginLeft="16sp" android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@drawable/little_shadow">

                <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:gravity="center|center_vertical">
                    <TextView
                            android:text="@string/profiles"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/profilesText"
                            android:textSize="14sp" android:textStyle="bold" android:gravity="center"/>
                    <ImageView
                            android:src="@drawable/profile"
                            android:layout_width="80dp"
                            android:layout_height="80dp" android:id="@+id/imageView"
                            app:srcCompat="@drawable/profile" android:contentDescription="@string/todo"/>
                    <TextView
                            android:text="@string/amount_symbol"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/amountOne"
                            android:layout_margin="2dp" android:textSize="18sp"/>
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:gravity="center" android:layout_margin="2dp">
                        <TextView
                                android:text="@string/voidText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/profilesAmount"
                                android:textSize="18sp" android:textStyle="bold" android:gravity="center"/>
                        <TextView
                                android:text="@string/lineal_meters"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/linearMeters"
                                android:gravity="center"
                                android:layout_marginStart="10sp" android:layout_margin="0dp"/>
                    </LinearLayout>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:gravity="center|center_vertical">
                    <TextView
                            android:text="@string/blocks"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/blocksText" android:textSize="14sp"
                            android:textStyle="bold" android:gravity="center"/>
                    <ImageView
                            android:src="@drawable/block"
                            android:layout_width="80dp"
                            android:layout_height="80dp" android:id="@+id/imageView6" app:srcCompat="@drawable/block"
                            android:contentDescription="@string/todo"/>
                    <TextView
                            android:text="@string/amount_symbol"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/amountTwo"
                            android:layout_margin="2dp" android:textSize="18sp"/>
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:gravity="center" android:layout_margin="2dp">
                        <TextView
                                android:text="@string/voidText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/blocksAmount"
                                android:textSize="18sp" android:textStyle="bold" android:gravity="center"/>
                        <TextView
                                android:text="@string/units"
                                android:layout_width="wrap_content"
                                android:layout_height="18dp" android:id="@+id/units"
                                android:gravity="center" android:layout_marginStart="10sp" android:layout_margin="0dp"/>
                    </LinearLayout>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="89dp"
                          android:gravity="center|center_vertical">
                    <TextView
                            android:text="@string/mesh"
                            android:layout_width="85dp"
                            android:layout_height="wrap_content" android:id="@+id/meshText" android:textSize="12sp"
                            android:textStyle="bold" android:gravity="center" android:maxWidth="75dp"/>
                    <ImageView
                            android:src="@drawable/mesh"
                            android:layout_width="80dp"
                            android:layout_height="80dp" android:id="@+id/imageView7" app:srcCompat="@drawable/mesh"
                            android:contentDescription="@string/todo"/>
                    <TextView
                            android:text="@string/amount_symbol"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/amountThree"
                            android:layout_margin="2dp" android:textSize="18sp"/>
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:gravity="center">
                        <TextView
                                android:text="@string/voidText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/meshAmount"
                                android:textSize="18sp"
                                android:textStyle="bold" android:gravity="center"/>
                        <TextView
                                android:text="@string/mesh_size"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/meshUnits"
                                android:gravity="center"
                                android:layout_marginStart="10sp" android:layout_margin="2dp"/>
                    </LinearLayout>
                </TableRow>
            </TableLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:background="@color/colorPrimary"
                    android:gravity="center">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/ferropazBrand"
                        android:text="@string/brand_text" android:textColor="#FFFFFF"
                        android:textSize="10sp" android:gravity="center" android:layout_margin="10sp"/>
                <TextView
                        android:text="@string/disclaimer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView10" android:textSize="8sp"
                        android:gravity="center" android:textColor="#FFFFFF" android:textStyle="italic"
                        android:layout_marginRight="10sp" android:layout_marginLeft="10sp"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_margin="10sp">
                    <info.androidhive.fontawesome.FontTextView
                            android:text="@string/developed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView9" android:layout_weight="1"
                            android:textColor="#FFFFFF" android:textSize="11sp" android:layout_gravity="center"
                            android:layout_margin="3sp"/>
                    <TextView
                            android:text="@string/nojipiz"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/nojipizBrand"
                            android:textColor="#FFFFFF" android:textSize="11sp" android:textStyle="bold"
                            android:layout_gravity="center" android:clickable="true"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>